@@ -150,7 +150,7 @@ sub new {
     #menubar will be deprecated, replaced with below
     $self->{lynx} = 1 if ( ( defined $self->{path} ) && ( $self->{path} =~ /lynx/i ) );
 
-    $self->{version}   = "1.3.2";
+    $self->{version}   = "1.3.3";
     $self->{dbversion} = "1.3.3";
 
     bless $self, $type;
